# Geometry

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/geometry/: __init__.py  array_types.py
src/geometry/planar/: README.md  __init__.py  measure.py
src/geometry/planar/box/: README.md  __init__.py  base.py  box.py  boxes.py  format.py
src/geometry/planar/box/boxes_/: README.md  __init__.py  box_xywh.py  box_xyxy.py  boxes_xywh.py  boxes_xyxy.py
src/geometry/planar/box/utils/: README.md  __init__.py  box2d_calculator.py  box2d_converter.py  converters.py
src/geometry/planar/line/: README.md  __init__.py  base.py  line.py  lines.py
src/geometry/planar/point/: README.md  __init__.py  base.py  point.py  points.py
src/geometry/planar/polar/: __init__.py  coordinate.py
src/geometry/planar/vector/: __init__.py  base.py  vector.py  vector_pair.py  vectors.py
src/geometry/spatial/: README.md  __init__.py  coordinate_type.py
src/geometry/spatial/line/: __init__.py  base.py  line.py  lines.py
src/geometry/spatial/normal/: __init__.py  normal_map.py  normal_value.py
src/geometry/spatial/point/: README.md  __init__.py  base.py  point.py  points.py
src/geometry/spatial/vector/: __init__.py  base.py  normalized_orthogonal_vectors.py  vector.py  vector_pair.py  vectors.py
src/geometry/utils/: README.md  rotation.py
tests/: test_boxes2d_indexing.py
