[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "geometry"
version = "0.0.1"
authors = [
  { name = "Ryuto Yoshida" },
]
description = "2D/3D geometry primitives and utilities (points, lines, vectors, boxes, coordinates)."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "scipy",
    "shapely",
    "units @ git+https://github.com/ry-yoshida-dev/Units.git",
    "rotation @ git+https://github.com/ry-yoshida-dev/Rotation.git",
    "cartesian-axis-3d @ git+https://github.com/ry-yoshida-dev/CartesianAxis3D.git",
    "handedness-rotation @ git+https://github.com/ry-yoshida-dev/HandednessRotation.git",
]

[project.urls]
Homepage = "https://github.com/ry-yoshida-dev/Geometry"
"Bug Tracker" = "https://github.com/ry-yoshida-dev/Geometry/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
geometry = ["py.typed"]
